# hsc3-forth

./: .gitlab-ci.yml  Makefile  README  README.md  cabal.project  hsc3-forth.cabal
.github/workflows/: ci.yml
Language/Forth/Interpreter/: Simple.hs
cmd/: Makefile  hsc3-forth.hs  rat-forth.hs
el/: hsc3-forth.el
fs/: hsc3.fs  overlap-texture.fs  ratlib.fs  sapf.fs  stdlib.fs  tutorial.fs
help/: README  announce.text  jmcc.fs  tutorial.fs
help/graph/: F0 - 2012 04 19.fs  F0 - Pkt 00.fs  F0 - Tw 0049.fs  F0 - Tw 0055.fs  F0 - Tw 0062.fs  F0 - Tw 0071.fs  F0 - Tw 0086.fs  F0 - Tw 0120.fs  F0 - Tw 0121.fs  F0 - Tw 0125.fs  F0 - Tw 0230.fs  F0 - Tw 0246.fs  F0 - Tw 0248.fs  F0 - Tw 0251.fs  F0 - Tw 0270.fs  F0 - Tw 0272.fs  F0 - Tw 0281.fs  F0 - Tw 0299.fs  F0 - Tw 0308.fs  F0 - Tw 0318.fs  F0 - Tw 0321.fs  F0 - Tw 0332.fs  Jmcc - Analog-bubbles.fs  Jmcc - Cymbalism-accelerando.fs  Jmcc - Cymbalism.fs  Jmcc - Noise-burst-sweep.fs  Jmcc - Pond-life.fs  Jmcc - Random-sine-waves.fs  Jmcc - Reverberated-sine-percussion.fs  Jmcc - Sample-and-hold-liquidities.fs  Jmcc - Sapf.fs  Jmcc - Why-supercollider.fs  Jmcc - Zizle.fs  Ljp - One-line.fs  jmcc-aleatoric-quartet.fs  jmcc-alien-froggies.fs  jmcc-alien-meadow.fs  jmcc-analog-bubbles-mouse.fs  jmcc-analog-bubbles.fs  jmcc-analogue-daze.fs  (+75 more)
help/instr/: rd-lz-bf.fs  rd-tgb.fs
help/texture/: jmcc-alien-froggies.fs  jmcc-alien-meadow.fs  jmcc-birdies.fs  jmcc-blips-001.fs  jmcc-bouncing-objects.fs  jmcc-bowed-string.fs  jmcc-choip.fs  jmcc-clustered-sines.fs  jmcc-contamination-zone.fs  jmcc-coolant.fs  jmcc-cymbalism-accelerando.fs  jmcc-cymbalism.fs  jmcc-data-space.fs  jmcc-deep-trip.fs  jmcc-drone-plus-rhythm.fs  jmcc-hard-sync-sawtooth-with-lfo.fs  jmcc-hell-is-busy.fs  jmcc-lots-o-sines.fs  jmcc-narrow-band-filtered-crackle-noise.fs  jmcc-noise-burst-sweep.fs  jmcc-noise-modulated-sawtooths.fs  jmcc-noise-modulated-sines.fs  jmcc-phase-modulation.fs  jmcc-pond-life.fs  jmcc-pulsing-bottles.fs  jmcc-rails.fs  jmcc-random-panning-sines.fs  jmcc-random-pulsations.fs  jmcc-random-sine-waves.fs  jmcc-reso-pulse.fs  jmcc-resonant-dust.fs  jmcc-resonators-harmonic-series.fs  jmcc-reverberated-sine-percussion.fs  jmcc-ring-modulated-klank.fs  jmcc-saucer-base.fs  jmcc-sawed-cymbals.fs  jmcc-sidereal-time.fs  jmcc-slow-beating-harmonic-sines.fs  jmcc-slow-beating-sines.fs  jmcc-swept-resonant-noise.fs  (+5 more)
help/ugen/: Hpz1.help.fs  Rand.help.fs  SinOsc.help.fs  WhiteNoise.help.fs  hpz1.help.fs  sinosc.help.fs  splay2.help.fs  whitenoise.help.fs
hs/: Forth.hs  Lisp.hs  Makefile  Rational.hs  SC3.hs  hsc3-forth.hs  hsc3-lisp.hs  iforth.hs  rat-forth.hs  rat-lisp.hs  uforth.hs
lisp/: Makefile  hsc3.lisp  rsc3-compat.lisp  rsc3.lisp  scheme.lisp  stdlib.lisp  tutorial.lisp  ugen.lisp
md/: video.md
