Name:              hsc3-forth
Version:           0.19
Synopsis:          FORTH SUPERCOLLIDER
Description:       FORTH SUPERCOLLIDER
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape, 2014-2020
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-forth
Tested-With:       GHC == 8.8.3
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README

executable hsc3-forth
  build-depends:   base >= 4.8 && < 5,
                   containers,
                   directory,
                   filepath,
                   hashable,
                   hosc == 0.19.*,
                   hsc3 == 0.19.*,
                   hsc3-db == 0.19.*,
                   hsc3-dot == 0.19.*,
                   hsc3-lang == 0.19.*,
                   hsc3-rw == 0.19.*,
                   mtl,
                   unix
  hs-source-dirs:  hs
  other-modules:   Forth
  main-is:         hsc3-forth.hs
  ghc-options:     -Wall -fno-warn-orphans -fwarn-tabs

Source-Repository  head
  Type:            darcs
  Location:        http://rohandrape.net/sw/hsc3-forth/
