Cabal-Version:     2.4
Name:              hsc3-forth
Version:           0.21
Synopsis:          Forth SuperCollider
Description:       Forth SuperCollider
License:           GPL-3.0-only
Category:          Sound
Copyright:         (c) Rohan Drape, 2014-2023
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-forth
Tested-With:       GHC == 9.6.1
Build-Type:        Simple

Data-files:        README.md

library
  build-depends:    base == 4.* && < 5,
                    containers,
                    directory,
                    filepath,
                    hashable,
                    mtl,
                    unix,
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs
  exposed-modules:  Language.Forth.Interpreter.Simple

executable hsc3-forth
  build-depends:    base >= 4.8 && < 5,
                    containers,
                    directory,
                    filepath,
                    hashable,
                    hosc == 0.21.*,
                    hsc3 == 0.21.*,
                    hsc3-db == 0.21.*,
                    hsc3-dot == 0.21.*,
                    hsc3-forth == 0.21.*,
                    hsc3-lang == 0.21.*,
                    hsc3-rw == 0.21.*,
                    mtl,
                    process
  hs-source-dirs:   cmd
  main-is:          hsc3-forth.hs
  ghc-options:      -Wall -fno-warn-orphans -fwarn-tabs
  default-language: Haskell2010

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hsc3-forth/
